--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="badge" style="--accent-morse:#ff6b35;border-color:var(--accent-morse);color:var(--accent-morse);"><span class="badge-dot" style="background:var(--accent-morse);"></span> MORSE</div>
     </div>
     <div class="progress-bar"><div class="progress-fill" style="width:100%"></div></div>
-    <p class="subtitle">Tap rhythmically. Wait 1s between letters. Target: "VALUEFLAG-LAST-TWO-COMPLETED"</p>
+    <p class="subtitle">Tap rhythmically. Wait 1s between letters. </p>
 
     <p class="section-title">Beacon Signal</p>
     <div class="morse-text">.-.. .- ... - ..-. .-.. .- --.</div>
@@ -370,3 +370,4 @@
   </script>
 </body>
 </html>
+
